force-app/main/default/objects/Job_Applicants__c/Job_Applicants__c.object-meta.xml
<CustomObject>
    <description>A junction object to link job__c and candidate_Details__c objects</description>
    <label>Job Applicants</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Job Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>